# EasyRPC

./: .gitignore  README.md
.NET/shikii.Hub.Core/: KeyValuePairEx.cs  shikii.Hub.Core.csproj
.NET/shikii.Hub.Core/DI/: DIClassAttribute.cs  DiManager.cs
.NET/shikii.Hub.Core/Helpers/: EmbeddedResManager.cs  Encrypt.cs  ExtensionFuncs.cs  FileSystemManager.cs  IntelliLauncher.cs  KiiLog.cs  SHA1_MD5.cs  StringCompress.cs
.NET/shikii.Hub.Core/ICSharpCode.SharpZipLib/Zip/: ZipFile.cs
.NET/shikii.Hub.Core/Interfaces/: IBootableAssembly.cs
.NET/shikii.Hub.Core/LitJson/: IJsonWrapper.cs  IgnorePropAttribute.cs  JsonData.cs  JsonMapper.cs  JsonReader.cs  JsonWriter.cs
.NET/shikii.Hub.Core/Networking/: Signals.cs  TCPBase.cs  TCPClient.cs  TCPServer.cs
.NET/shikii.Hub.Core/Networking/Services/: CTCMessage.cs  DaemonThreadInfo.cs  NetworkFileBeginInfo.cs  NetworkFileInfo.cs  RequestResultInfo.cs  ServiceAssemblyInfo.cs  ServiceCenter.cs  ServiceHost.cs
.NET/shikii.Hub.Core/Web/: BaseController.cs  IWebApiApp.cs  NodeJsWebAPI.cs  ObjectJsonResult.cs  ServiceStatusManager.cs
.NET/shikii.Hub.Core/Web/Attributes/: GetPostAttributes.cs  (+1 more)
CPP/ServiceCenter/: CMakeLists.txt  bootableAssemblyList.json
CPP/ServiceCenter/include/: Helper.h  ServiceCenter.h  ServiceHost.h  Signals.h  TCPBase.h  TCPClient.h  TCPServer.h
CPP/ServiceCenter/src/: main.cpp
CPP/ServiceCenter/webServer/: LogInfoItem.js  NodeJsClient.js  ServiceHost.js  app.js  package.json
Java/: .project  Readme.md  settings.gradle
Java/app/: build.gradle
Java/gradle/wrapper/: gradle-wrapper.properties
(+44 files in other folders)
