cmake_minimum_required(VERSION 3.0.0)
project(ServiceCenter VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 11)
include_directories(include)
aux_source_directory(src DIR_SRC)
if(CMAKE_HOST_SYSTEM_NAME MATCHES "Windows")
        link_libraries(ws2_32 wsock32)
        link_libraries(psapi)
endif()
add_executable(ServiceCenter ${DIR_SRC})